now preloading material icons to improve overall load time - also now hiding overflow in validation detail component to prevent ugly div spillage on initial load of validation report

--- a/src/app/components/study/validations-v2/validation-detail/validation-detail.component.css
+++ b/src/app/components/study/validations-v2/validation-detail/validation-detail.component.css
@@ -86,6 +86,7 @@
     color: #f5f5f5;
     padding-top: 14%;
     padding-left: 33%;
+    overflow: hidden;
 }
 
 .row-content {
